# dg

./: .clang-format  .clang-tidy  .gitignore  README.md
cmake/: pedantic.cmake
doc/: README.md  TODO.md
engine/: CMakeLists.txt
engine/include/engine/: bind_guard.hpp  bindable.hpp  context.hpp  engine.hpp  error.hpp  mesh.hpp  mesh_loader.hpp  shader_program.hpp  util.hpp  vertex_array.hpp  window.hpp
engine/src/: bind_guard.cpp  context.cpp  engine.cpp  error.cpp  mesh.cpp  mesh_loader.cpp  shader_program.cpp  util.cpp  vertex_array.cpp  window.cpp
engine/test/: CMakeLists.txt
orbi/: CMakeLists.txt
orbi/android-project/: local.properties
orbi/android-project/app/: build.gradle
orbi/android-project/app/src/main/: AndroidManifest.xml
orbi/android-project/app/src/main/java/com/github/feelamee/dg/: DGActivity.java
orbi/res/: suzanne.glb  torus.glb
orbi/src/: main.cpp
